[package]
name = "nrelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.23.0", features = ["full"] }
tokio-stream = { version = "=0.1.11", features = ["sync", "net"] }
bytes = "=1.3.0"

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "=0.3.16", features = ["env-filter", "fmt", "local-time", "time"]}
tracing-appender = "=0.2.2"
time = { version = "=0.3.17", features = ["macros", "local-offset"]}
# ansi_term = "=0.12.1"

clap = { version = "=4.0.32", features = ["derive"] }
anyhow = "=1.0.71"
lazy_static = "=1.4.0"
url = "=2.3.1"

built = "=0.6.1"

[build-dependencies]
built = { version = "=0.6.1", features = ["chrono", "git2", "semver"] }
anyhow = "=1.0.71"
